[tool.poetry]
name = "wechaty-demo-py"
version = "0.1.0"
description = ""
authors = ["markshawn2020 <shawninjuly@gmail.com>"]
readme = "README.md"
packages = [{include = "wechaty_demo_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
