[tool.poetry]
name = "wechaty-demo-py"
version = "0.1.0"
description = ""
authors = ["markshawn2020 <shawninjuly@gmail.com>"]
readme = "README.md"
packages = [{include = "wechaty_demo_py"}]

[tool.poetry.dependencies]
python = "^3.9"
wechaty = "^0.10.7"
wechaty-puppet = "^0.4.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
